# OpenMIRA

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/pi-agent-runtime/: package-lock.json  package.json
backend/scripts/: create_telegram_user_session.py  dev_login.py  export_openapi.py  list_telegram_dialogs.py  register_telegram_webhook.py
backend/tests/: conftest.py  test_agent_contract_fixture.py  test_agent_policy.py  test_agent_queue.py  test_ai_reply_archive.py  test_ai_reply_generator.py  test_analysis_gateway.py  test_analysis_run_models.py  test_analysis_run_policy.py  test_analysis_run_postgres.py  test_analysis_run_route.py  test_analyze_message.py  test_auth_native_login.py  test_auth_password_login.py  test_auto_reply_policy.py  test_auto_reply_repository_postgres.py  test_auto_reply_use_case.py  test_billing_event_repository_postgres.py  test_config.py  test_dashboard_repository_postgres.py  test_dashboard_route_logic.py  test_detection_policy.py  test_device_routes.py  test_device_session_postgres.py  test_device_session_security.py  test_device_sync_foundation_postgres.py  test_device_sync_models.py  test_friend_request_route.py  test_ingest_semantic_detection.py  test_interactive_agent_action_postgres.py  test_interactive_agent_domain.py  test_interactive_agent_gateway.py  (+44 more)
(+1657 files in other folders)
