[project]
name = "opportunity-im-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for IM opportunity detection and assisted replies"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "celery==5.6.3",
    "cryptography==48.0.1",
    "fastapi==0.139.0",
    "greenlet==3.5.3",
    "httpx[http2]==0.28.1",
    "langchain==1.3.11",
    "langchain-core==1.4.8",
    "langchain-litellm==0.7.0",
    "langgraph==1.2.8",
    "litellm==1.91.0",
    "orjson==3.11.9",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "python-telegram-bot==22.8",
    "redis==8.0.1",
    "setuptools==80.9.0",
    "sqlalchemy==2.0.51",
    "sqlmodel==0.0.39",
    "structlog==26.1.0",
    "telethon==1.44.0",
    "tenacity==9.1.4",
    "uvicorn[standard]==0.50.2",
    "xmltodict==1.0.4",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "respx==0.23.1",
    "ruff==0.15.20",
]

[tool.uv]
package = false
required-version = ">=0.10,<0.12"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
